# Raven

./: .gitignore  Cargo.toml  README.md  app.toml  go.mod  go.sum  main.go  web_parser.go
cluster/log/: base_logger.go  hc_logger.go
cluster/server/routes/: search.go
docs/: h3_geospatial.md
searchengine/: inverted_index.go  inverted_index_test.go  search_engine.go  search_engine_dump.go  stopword_cleaning.go
searchengine/vectordb/: vector_index.go
server/routes/: search.go
src/: constants.rs  lib.rs  main.rs  stopwords.rs
src/collection/: mod.rs
src/engine/: mod.rs
src/error/: mod.rs
src/schema/: document.rs  mod.rs  range.rs
src/search/: mod.rs
src/tokenizers/: manager.rs
src/types/: mod.rs
websearchengine/: inverted_index.go  search_engine.go
