[package]
name = "raven"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.38", features = ["derive"]}
hashbrown = "0.15.3"
tantivy = "0.24.1"
tokio = { version = "1.45.0", features = ["full"] }
whatlang = "0.16.4"
tikv-jemallocator = "0.5"
tracing = {version = "0.1.34", features = ["release_max_level_info"]}
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
tracing-test = "0.2.4"
serde = "1.0.219"
toml = "0.8.22"
thiserror = "2.0.12"
