[package]
name = "raven"
version = "0.1.0"
edition = "2024"

[features]
icu = ["rust_icu_ubrk", "rust_icu_sys", "rust_icu_uloc", "rust_icu_ustring"]

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.38", features = ["derive"]}
hashbrown = "0.15.3"
tantivy = "0.24.1"
tokio = { version = "1.45.0", features = ["full"] }
whatlang = "0.16.4"
tikv-jemallocator = "0.5"
tracing = {version = "0.1.34", features = ["release_max_level_info"]}
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
tracing-test = "0.2.4"
serde = "1.0.219"
toml = "0.8.22"
thiserror = "2.0.12"
serde_json = "1.0.140"
derive_more = { version = "2", features = ["full"] }
rstest = "0.25.0"
lindera = { version = "0.42.2", features = [
  "cc-cedict",
  "ipadic",
  "ko-dic",
  "compress",
] }
once_cell = "1.21.3"
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
tantivy-tokenizer-api = "0.5.0"
h3o = "0.8.0"
rustc-hash = "2.1.1"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
tempfile = "3.20.0"


[dependencies.rust_icu_ubrk]
version = "5.0.0"
optional = true

[dependencies.rust_icu_sys]
version = "5.0.0"
optional = true

[dependencies.rust_icu_ustring]
version = "5.0.0"
optional = true

[dependencies.rust_icu_uloc]
version = "5.0.0"
optional = true

[dev-dependencies]
rstest = "0.25.0"

[dependencies.rust_icu_common]
version = "5.0.0"
optional = true

[package.metadata.cargo-machete]
ignored = ["rust_icu_common", "strum"]
